# hif

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE
hif/: BUILD  file_write.cpp  file_write.hpp  hif.cpp  hif.hpp  hif_base.cpp  hif_base.hpp  hif_read.cpp  hif_read.hpp  hif_write.cpp  hif_write.hpp  waterhash.hpp
tests/: BUILD  hif_bench.cpp  hif_cat.cpp  hif_dump.cpp  hif_rand_test.cpp  hif_test.cpp
