###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.3")

# Abseil cpp
bazel_dep(name = "abseil-cpp", version = "20250814.0")

# Google test
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

# Google Benchmark
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)

