###############################################################################
module(
    name = "hif",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.16")

# Abseil cpp
bazel_dep(name = "abseil-cpp", version = "20250814.2")

# Google test
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Google Benchmark
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

